BTG version 0.9.9
-----------------
The following bugs were fixed:

014407 Show limits ranges in geometrical progression.
014372 Building issue (at configure step).
014371 Does not compile against boost 1.36.
014353 btgncli doc doesn't say what key configuration does.
014351 WAN annouce ip not used.
014305 Limits and sel.files persistance when move betw. sessions.
014280 btgncli, add sorting by..
014271 Typo in btg.js.
014268 Update Freebsd notes in howto.
014223 libsigc++-2.2.* is not supported.
013963 btgcli limit setting error.
011275 Use UPnP support from libtorrent.

BTG version 0.9.8
-----------------
The following bugs were fixed:

014142 Compilation broke on curl link with --as-needed LDFLAG.
014067 BTG SVN fails to compile with SVN Libtorrent.
014061 XMLRPC_Client fails to parse some XMLs.
013987 btgcli can't read commands from file.
013985 Installed xmlrpc-epi should be tested.
013984 Remove bundled expat.
013983 Installed plotmm should be tested.
013975 Incorrect torrent statuses.
013971 Display build and revision numbers on the wwwUI pages.
013964 btgcli: Do not print LF when displaying downloaded pieces.
013961 Race-condition in btgui (in peer-list).
013932 btg-daemon-0.9.8 not installable on debian.
013931 Bad URL displayed after DEB install.
013859 Remove ncurses from btgcli.
013852 Use torrent-ip to create lt sessions.
013833 Convert projectDefaults to a non-singleton.
013832 XMLRPC response parse error.
013814 Configure script does not detect lt upnp in lt 0.14.
013774 Add amd64 architecture to the packages.
013720 Daemon hangup on incorrect torrent file.
013708 Seeder/Leecher counts incorrect.
013701 Keys for "Quit" and "Back" should be separate.
013700 Reload filter list w/o restarting daemon.
013678 Update openwrt makefiles.
013645 Smooth URL loading indicator.
013644 Ports opened by UPnP when it is disabled.
013643 Daemon starts without rewriting unexistent pid.
013642 btgui incorrect behavior during init. when comm. error.